# VideoAnalysisController

./: .gitignore  Cargo.toml  README.md  appveyor.yml  build.rs  deploy.sh  innosetup.iss  keymap.toml  logo.xcf
.github/workflows/: ci.yml
src/: action_handling.rs  ffmpeg.rs  fltk_gui.rs  main.rs  zooming.rs
src/input/: controller.rs  keyboard.rs  keyboard_fltk.rs  keyboard_linux.rs  keyboard_windows.rs  mod.rs
