[package]
name = "VideoAnalysisController"
version = "0.1.0"
authors = ["Oliver Braunsdorf <oliver.braunsdorf@aisec.fraunhofer.de>"]
edition = "2018"
build = "build.rs"

[dependencies]
vlc-rs = { git  = "https://github.com/obraunsdorf/vlc-rs" }
gilrs = "0.7.1"
configuration = "0.7.2"

[target.'cfg(windows)'.dependencies]
winapi-easy = "0.1.0"

[target.'cfg(target_os="linux")'.dependencies]
inputbot = "0.5.0"
