[package]
name = "VideoAnalysisController"
version = "0.1.0"
authors = ["Oliver Braunsdorf <oliver.braunsdorf@aisec.fraunhofer.de>"]
edition = "2018"
build = "build.rs"

[dependencies]
vlc-rs = { git  = "https://github.com/obraunsdorf/mfkl-vlc-rs.git" }
gilrs = "0.7.1"
fltk = { version = "1.2.3", features = ["fltk-bundled"] }